[package]
name = "serde_int_map"
version = "0.1.1"
description = "General traits for serde_int_map_derive"
license = "MIT"
homepage = "https://github.com/puiterwijk/serde_int_map"
authors = ["Patrick Uiterwijk <patrick@puiterwijk.org>"]
edition = "2018"

[lib]

[dependencies]
serde_int_map_derive = "0.1.1"
