[package]
name = "serde_int_map_derive"
version = "0.2.0"
description = "Deriviation of serde Serialize and Deserialize for maps indexed by integers"
license = "MIT"
homepage = "https://github.com/puiterwijk/serde_int_map"
authors = ["Patrick Uiterwijk <patrick@puiterwijk.org>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
serde_int_map_traits = { version = "0.2", path = "../serde_int_map_traits" }

[features]
print_tokenstreams = []
